--- a/references.bib
+++ b/references.bib
@@ -1629,7 +1629,7 @@
 
 @misc{plotly2024c,
 	title = {Scatter Plots in JavaScript},
-	 author	= {{Plotly Inc.}},
+	author	= {{Plotly Inc.}},
 	year = {2024},
 	month = dec,
 	note = {[Online; accessed 15. Dec. 2024]},
@@ -2283,6 +2283,24 @@
   month		= aug,
   note		= {[Online; accessed 22. Aug. 2022]},
   url		= {https://vega.github.io/vega-lite/examples/#interactive}
+}
+
+@misc{vegalite2024a,
+	title = {{Dynamic Behaviors with Parameters}},
+	author	= {{Vega Project}},
+	year = {2024},
+	month = aug,
+	note = {[Online; accessed 16. Dec. 2024]},
+	url = {https://vega.github.io/vega-lite/docs/parameter.html}
+}
+
+@misc{vegalite2024b,
+	title = {{Binding a Parameter}},
+	author	= {{Vega Project}},
+	year = {2024},
+	month = aug,
+	note = {[Online; accessed 16. Dec. 2024]},
+	url = {https://vega.github.io/vega-lite/docs/bind.html}
 }
 
 @Misc{		  veight2017,
