--- a/litreview.Rmd
+++ b/litreview.Rmd
@@ -203,7 +203,7 @@ In general, these contemporary web-based interactive data visualization systems 
 
 For instance, the [R Graph Gallery entry on Interactive Charts](https://r-graph-gallery.com/interactive-charts.html) [@holtz2022] features multiple interactive figures implemented in the JavaScript libraries described above. However, all of these examples show only surface-level single-plot interactive features such zooming, panning, hovering, 3D rotation, and node repositioning. The [Plotly Dash documentation page on Interactive Visualizations](https://dash.plotly.com/interactive-graphing) [@plotly2022] does feature two examples of simple linked cross-filtering, however, the vast majority of visualizations in the [Plotly R Open Source Graphing Library documentation page](https://plotly.com/r/) [@plotly2022] show examples only surface-level interactivity. Similarly, [VegaLite Gallery pages on Interactive Charts](https://vega.github.io/vega-lite/examples/#interactive-charts) [@vegalite2022] feature many examples, however, there is only a limited number of examples of linked or parametric interactivity (see e.g. [Interactive Multiview Displays](https://vega.github.io/vega-lite/examples/#interactive-multi-view-displays)). Finally, the [Highcharter Showcase Page ](https://jkunst.com/highcharter/articles/showcase.html) [@kunst2022] does not feature any examples of linking.
 
-Of course, with enough effort, users of these web-based visualization systems can still create rich interactive figures with advanced features such as complex linked views and parametric interaction. However, implementing these features may require dealing with reactivity and visualization primitives directly. This defeats the purpose of using a high-level libraries and also creates a barrier to entry for people looking to use these more interesting types of interaction. While large organizations can afford to hire specialists to work on interactive dashboards full-time, to the average scientist or data analyst, the upfront cost of producing interactive visualizations may be too high, especially if one is interested in "quick and dirty" exploratory data analysis. This may explain why interactive visualizations are nowadays mainly used for data presentation, not data exploration [@batch2017].
+Of course, with enough effort, users of these web-based visualization systems can still create rich interactive figures with advanced features such as complex linked views and parametric interaction. However, implementing these features often requires dealing with low-level reactivity and visualization primitives directly, defeating the purpose of using a high-level library and creating a barrier to entry for casual users [@keller2024]. This may explain why interactive visualizations are nowadays mainly used for data presentation, not data exploration [@batch2017].
 
 ## What even is interactive data visualization? {#what-is-interactive-visualization}
 
