--- a/references.bib
+++ b/references.bib
@@ -3203,4 +3203,80 @@
   publisher={Springer}
 }
 
+@inproceedings{keller2024,
+  title={Use-Coordination: Model, Grammar, and Library for Implementation of Coordinated Multiple Views},
+  author={Keller, Mark S and Manz, Trevor and Gehlenborg, Nils},
+  booktitle={2024 IEEE Visualization and Visual Analytics (VIS)},
+  pages={166--170},
+  year={2024},
+  organization={IEEE}
+}
 
+@inproceedings{boukhelifa2003a,
+  title={A coordination model for exploratory multiview visualization},
+  author={Boukhelifa, Nadia and Roberts, Jonathan C and Rodgers, Peter J},
+  booktitle={Proceedings International Conference on Coordinated and Multiple Views in Exploratory Visualization-CMV 2003-},
+  pages={76--85},
+  year={2003},
+  organization={IEEE}
+}
+
+@article{boukhelifa2003b,
+  title={A model and software system for coordinated and multiple views in exploratory visualization},
+  author={Boukhelifa, Nadia and Rodgers, Peter J},
+  journal={Information Visualization},
+  volume={2},
+  number={4},
+  pages={258--269},
+  year={2003},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{mcdonald1990,
+  title={Painting multiple views of complex objects},
+  author={McDonald, John Alan and Stuetzle, Werner and Buja, Andreas},
+  journal={ACM SIGPLAN Notices},
+  volume={25},
+  number={10},
+  pages={245--257},
+  year={1990},
+  publisher={ACM New York, NY, USA}
+}
+
+@misc{uzis2024,
+	author = {{ÚZIS}},
+	title = {{About us - {\ifmmode\acute{U}\else\'{U}\fi}ZIS {\ifmmode\check{C}\else\v{C}\fi}R}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 17. Dec. 2024]},
+	url = {https://www.uzis.cz/index-en.php?pg=about-us}
+}
+
+@misc{icd2024a,
+	title = {{ICD-10 Version:2019}},
+	author = {{World Health Organization}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 17. Dec. 2024]},
+	url = {https://icd.who.int/browse10/2019/en}
+}
+
+@misc{icd2024b,
+	title = {{International Classification of Diseases (ICD)}},
+	author = {{World Health Organization}},
+	year = {2024},
+	month = dec,
+	note = {[Online; accessed 17. Dec. 2024]},
+	url = {https://www.who.int/standards/classifications/classification-of-diseases}
+}
+
+@misc{soukupova2023,
+	author = {Soukupová, J and Melicharová, H and Šanca, O and Bartůněk, V and Jarkovský, J and Komenda, M},
+	title = {{Dlouhodob{\ifmmode\acute{a}\else\'{a}\fi} psychiatrick{\ifmmode\acute{a}\else\'{a}\fi} p{\ifmmode\acute{e}\else\'{e}\fi}{\ifmmode\check{c}\else\v{c}\fi}e}},
+	journal = {NZIP},
+	year = {2023},
+	month = jan,
+	note = {[Online; accessed 17. Dec. 2024]},
+	url = {https://www.nzip.cz/data/2060-dlouhodoba-psychiatricka-pece},
+	issn = {2695-0340}
+}
